--- a/mathHammer.html
+++ b/mathHammer.html
@@ -358,7 +358,7 @@ anti-stuff
         var $modelSpecialRules = $('#pastedom .dsRightСol');
 
         var aSpecial = ['Feel No Pain', 'Invulnerable', 'Vanguard Predator:','Stealth'];
-        var aAnti = ['Infantry', 'Vehicle', 'Monster', 'Character', 'Fly', 'Psyker', 'Beast', 'Cavalry', 'Walker', 'Titanic', 'Daemon', 'Heretic Astartes', 'Adeptus Astartes', 'Orks', 'Tyranids', 'Necrons', ];
+        var aAnti = ['Infantry', 'Vehicle', 'Monster', 'Character', 'Fly', 'Psyker', 'Beast', 'Cavalry', 'Walker', 'Titanic', 'Daemon', 'Heretic Astartes', 'Adeptus Astartes', 'Orks', 'Tyranids', 'Necrons', ]; //don't really need this, just look for keywords
         var aSpecialAcronyms = {
             'Feel No Pain': 'FNP',
             Invulnerable: 'Inv',
