Better output text, tweaked HTML

--- a/mathHammer.html
+++ b/mathHammer.html
@@ -80,13 +80,13 @@ swap attacker/defender
                         <div class="grid body">
                             <input class="count" type="number" min="1" value="1"/>
                             <span class="name"></span>
-                            <input class="move"/>
-                            <input class="toughness"/>
-                            <input class="save"/>
-                            <input class="invuln"/>
-                            <input class="wounds"/>
-                            <input class="leadership"/>
-                            <input class="objective_control"/>
+                            <input type="text" class="move"/>
+                            <input type="number" min="1" class="toughness"/>
+                            <input type="text" class="save"/>
+                            <input type="text" class="invuln"/>
+                            <input type="number" min="1"  class="wounds"/>
+                            <input type="text" class="leadership"/>
+                            <input type="number" min="1" class="objective_control"/>
                             <textarea class="keywords"></textarea>
                             <textarea class="special"></textarea>
                             <input type="radio" name="attacker_radio" class="attacker_radio" checked="checked"/>
@@ -115,13 +115,13 @@ swap attacker/defender
                         <div class="grid body">
                             <input class="count" type="number" min="1" value="1"/>
                             <span class="name"></span>
-                            <input class="move"/>
-                            <input class="toughness"/>
-                            <input class="save"/>
-                            <input class="invuln"/>
-                            <input class="wounds"/>
-                            <input class="leadership"/>
-                            <input class="objective_control"/>
+                            <input type="text" class="move"/>
+                            <input type="number" min="1" class="toughness"/>
+                            <input type="text" class="save"/>
+                            <input type="text" class="invuln"/>
+                            <input type="number" min="1"  class="wounds"/>
+                            <input type="text" class="leadership"/>
+                            <input type="number" min="1" class="objective_control"/>
                             <textarea class="keywords"></textarea>
                             <textarea class="special"></textarea>
                             <input type="radio" name="defender_radio" class="defender_radio"/
@@ -150,12 +150,12 @@ swap attacker/defender
                         <!-- Body -->
                         <div class="grid body">
                             <span class="name"></span>
-                            <input class="range"/>
-                            <input class="attacks"/>
-                            <input class="skill"/>
-                            <input class="strength"/>
-                            <input class="ap"/>
-                            <input class="damage"/>
+                            <input type="text" class="range"/>
+                            <input type="text" min="1" class="attacks"/>
+                            <input type="text" class="skill"/>
+                            <input type="text" min="1" class="strength"/>
+                            <input type="text" class="ap"/>
+                            <input type="text" class="damage"/>
                             <textarea class="special"></textarea>
                             <input type="checkbox" name="checked[]" class="check"/>
                         </div>
