--- a/mathHammer.html
+++ b/mathHammer.html
@@ -235,6 +235,8 @@ swap attacker/defender
         </div>
         <div class="section" id="pastedom"></div>
         
+        <div class="section footer" id="footerSection">
+            <p>Created by Chris v1.1.0</p>
     </div>
 </body>
 </html>
